--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 <p>Click the button to go to the HTML tutorial.</p>
 
-<button onclick="document.location='default.asp'">HTML Tutorial</button> <br>
+
 <h1>SCL</h1>
 
-<a href="https://kodular.app/YIU-FOS" download>
+<a href="rewad" download>
   <img src="/images/myw3schoolsimage.jpg" alt="download
   ">
 </a>
