--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
+</html>
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  margin: 0;
+  padding: 0;
+}
+
+h2, p {
+  margin: 10px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+ul li {
+  float: left;
+}
+
+ul li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  background-color: #111111;
+}
+</style>
+</head>
 <body>
 
-<h2>Button as a Links</h2>
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">Explore</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
-<p>Click the button to go to the HTML tutorial.</p>
+<h2>Horizontal Navbar Using Float</h2>
+
+<p>Some text on the website.</p>
 
 
-<h1>SCL</h1>
-
-<a href="rewad" download>
-  <img src="/images/myw3schoolsimage.jpg" alt="download
-  ">
+<a href="rewad" download> 
+  <img src="" width="120px" alt="download">
 </a>
 
 </body>
 </html>
+
+
