--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ul li a:hover {
   <li><a href="#news">Explore</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
-  <li style="float:right"><a href="comeing soon" download>Download</a></li>
+  <li style="float:right" "text:bold"><a href="comeing soon" download>Download</a></li>
 </ul>
 
 <h2>Horizontal Navbar Using Float</h2>
@@ -58,6 +58,7 @@ ul li a:hover {
 
 </body>
 </html>
+
 
 
 
